Standardize API to snake case from camel case
